--- a/_posts/2018-01-12-last-one.md
+++ b/_posts/2018-01-12-last-one.md
@@ -3,7 +3,7 @@ layout: post
 title:  "This is the last one"
 date:   2018-01-12 09:18:08 -0600
 categories: jekyll update
-abstract: Last post to test this things. 
+excerpt: Last post to test this things. 
   You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
 ---
 You’ll find this post in your `_posts` directory. Go ahead and edit it and re-build the site to see your changes. You can rebuild the site in many different ways, but the most common way is to run `jekyll serve`, which launches a web server and auto-regenerates your site when a file is updated.
